fix: align mobile tooltip top with pill position
Made-with: Cursor

--- a/src/modules/cashback-bar/cashback-bar.scss
+++ b/src/modules/cashback-bar/cashback-bar.scss
@@ -380,7 +380,7 @@ $pill-id: 'apostar-cashback-widget-pill';
   }
 
   ##{$pill-id}-tooltip {
-    top: 124px !important;
+    top: 110px !important;
     right: 54px;
     font-size: 0.65rem;
     padding: 5px 10px;
